--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Marketing Digital</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1 
+   <header class="cabecalho">
+    <img class="cabecalho-logo" src="logo.png" alt="">
+    <nav>
+        <a class="cabecalho-link" href="#"> HOME </a>
+        <a class="cabecalho-link" href="#"> CONTATO </a>
+    </nav>
+   </header>
+   <main></main>
+   <footer></footer>
 </body>
 </html>
