--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,15 @@
         <a class="cabecalho-link" href="#"> CONTATO </a>
     </nav>
    </header>
-   <main></main>
+   <main class="principal">
+    <section class="principal-capa">
+        <div>
+            <h2 class="ptincipal-capa_titulo"> Marketing Digital </h2>
+            <p class="principal-capa_texto"> Quanto mais sabedoria, melhor sua qualidade de vida! </p>
+        </div>
+        <img class="principal-capa_imagem" src="" alt="">
+    </section>
+   </main>
    <footer></footer>
 </body>
 </html>
