--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
    </header>
    <main class="principal">
     <section class="principal-capa">
+        <div clas=" principal-capa_combotao">
         <div>
-            <h2 class="ptincipal-capa_titulo"> Marketing Digital </h2>
+            <h2 class="principal-capa_titulo"> Marketing Digital </h2>
             <p class="principal-capa_texto"> Quanto mais sabedoria, melhor sua qualidade de vida! </p>
         </div>
-        <img class="principal-capa_imagem" src="" alt="">
+        <a class="principal-capa_botao" href="#"> Conheça nossos cursos e aprenda a ganhar dinheiro! </a>
+        </div>
+        <img class="principal-capa_imagem" src="ilustracao-de-duas-pessoas-apertando-as-maos-em-big_961875-402545.jpg" alt="">
     </section>
    </main>
    <footer></footer>
